--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -27,12 +27,12 @@ jobs:
         context: .
         file: ./docker/Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/argosbx-proxy:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/argosbx:latest
 
     - name: Test the image
       run: |
         echo "🧪 测试拉取和运行..."
-        docker run -d --name test-argosbx ${{ secrets.DOCKERHUB_USERNAME }}/argosbx-proxy:latest
+        docker run -d --name test-argosbx ${{ secrets.DOCKERHUB_USERNAME }}/argosbx:latest
         sleep 20
         echo "=== 容器日志 ==="
         docker logs test-argosbx --tail 20
@@ -42,10 +42,10 @@ jobs:
     - name: Success message
       run: |
         echo "🎉 成功推送到 Docker Hub!"
-        echo "🐳 镜像地址: ${{ secrets.DOCKERHUB_USERNAME }}/argosbx-proxy:latest"
-        echo "🚀 使用命令: docker run -d ${{ secrets.DOCKERHUB_USERNAME }}/argosbx-proxy:latest"
+        echo "🐳 镜像地址: ${{ secrets.DOCKERHUB_USERNAME }}/argosbx:latest"
+        echo "🚀 使用命令: docker run -d ${{ secrets.DOCKERHUB_USERNAME }}/argosbx:latest"
         echo ""
         echo "📖 完整使用示例:"
-        echo "docker pull ${{ secrets.DOCKERHUB_USERNAME }}/argosbx-proxy:latest"
-        echo "docker run -d --name argosbx ${{ secrets.DOCKERHUB_USERNAME }}/argosbx-proxy:latest"
+        echo "docker pull ${{ secrets.DOCKERHUB_USERNAME }}/argosbx:latest"
+        echo "docker run -d --name argosbx ${{ secrets.DOCKERHUB_USERNAME }}/argosbx:latest"
         echo "docker exec argosbx agsbx list"
