--- a/.env.custom
+++ b/.env.custom
@@ -20,6 +20,6 @@ NODE_PREFIX=my-proxy
 IP_PREFERENCE=4
 
 # Argo 配置（可选）
-# ENABLE_ARGO=yes
-# ARGO_DOMAIN=your-domain.argo.com
-# ARGO_AUTH=your-argo-token
+ENABLE_ARGO=yes
+ARGO_DOMAIN=your-domain.argo.com
+ARGO_AUTH=your-argo-token
